// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CancellationsPolicyView/> onSubmit() should set the eligibility option to processing fulfillment and make the update request 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            myStore1
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/self-service/shopify/myStore1/preferences/order-management"
      >
        Order Management Flows
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <button
            class="wrapper backButton ghost secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                arrow_back
              </i>
              Back to Order management flows
            </span>
          </button>
          <div
            class="mb-3"
          >
            <h4
              class="cancellationsPolicyTitle"
            >
              Cancel order
            </h4>
            <p
              class="cancellationsPolicyDescription"
            >
              Allow customers to request order cancellations directly from chat and your help center. A cancellation can only be requested if the order hasn't been processed or shipped.
               
              <a
                href="https://docs.gorgias.com/en-US/self-service-portal-statuses-81862#actions-availability"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
            </p>
            <br />
            <h5
              class="eligibilityWindowTitle"
            >
              Eligibility window
            </h5>
            <p
              class="eligibilityWindowDescription"
            >
              Customers can request a cancellation when an order meets the following criteria:
            </p>
            <form
              class=""
            >
              <div
                class="eligibilityWindowContainer"
              >
                <div
                  class="orderStatus"
                  id="order-status"
                >
                  Order status is
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="orderStatusSelectField"
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          Unfulfilled
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                        <i
                          class="material-icons dropdownIcon"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Processing Fulfillment
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Pending Delivery
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="deleteButton"
                >
                  <i
                    class="material-icons red mr-1"
                  >
                    clear
                  </i>
                </div>
              </div>
              <button
                class="wrapper mr-2 fill primary medium isDisabled"
                disabled=""
                type="submit"
              >
                Save changes
              </button>
              <button
                class="wrapper fill secondary medium isDisabled"
                disabled=""
                type="button"
              >
                Cancel
              </button>
            </form>
            <br />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CancellationsPolicyView/> render() should render the eligibility window option as unfulfilled 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            myStore1
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/self-service/shopify/myStore1/preferences/order-management"
      >
        Order Management Flows
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <button
            class="wrapper backButton ghost secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                arrow_back
              </i>
              Back to Order management flows
            </span>
          </button>
          <div
            class="mb-3"
          >
            <h4
              class="cancellationsPolicyTitle"
            >
              Cancel order
            </h4>
            <p
              class="cancellationsPolicyDescription"
            >
              Allow customers to request order cancellations directly from chat and your help center. A cancellation can only be requested if the order hasn't been processed or shipped.
               
              <a
                href="https://docs.gorgias.com/en-US/self-service-portal-statuses-81862#actions-availability"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
            </p>
            <br />
            <h5
              class="eligibilityWindowTitle"
            >
              Eligibility window
            </h5>
            <p
              class="eligibilityWindowDescription"
            >
              Customers can request a cancellation when an order meets the following criteria:
            </p>
            <form
              class=""
            >
              <div
                class="eligibilityWindowContainer"
              >
                <div
                  class="orderStatus"
                  id="order-status"
                >
                  Order status is
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="orderStatusSelectField"
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          Unfulfilled
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                        <i
                          class="material-icons dropdownIcon"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Processing Fulfillment
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Pending Delivery
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="deleteButton"
                >
                  <i
                    class="material-icons red mr-1"
                  >
                    clear
                  </i>
                </div>
              </div>
              <button
                class="wrapper mr-2 fill primary medium isDisabled"
                disabled=""
                type="submit"
              >
                Save changes
              </button>
              <button
                class="wrapper fill secondary medium isDisabled"
                disabled=""
                type="button"
              >
                Cancel
              </button>
            </form>
            <br />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CancellationsPolicyView/> render() should render the eligibility window option as unfulfilled with SelfServiceAutomatedResponseOrderManagement flag 1`] = `
<div>
  <div
    class="full-width"
  >
    <div
      class="page-header pageHeader"
    >
      <nav
        aria-label="breadcrumb"
        class=""
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item"
          >
            <a
              to="/app/settings/self-service"
            >
              Self-service
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            myStore1
          </li>
        </ol>
      </nav>
    </div>
    <nav
      class="navbar navbar"
    >
      <a
        activeclassname="active"
        class="link"
        to="/app/settings/self-service/shopify/myStore1/preferences/order-management"
      >
        Order Management Flows
      </a>
    </nav>
    <div
      class="pageContainer container-fluid"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <button
            class="wrapper backButton ghost secondary medium"
            type="button"
          >
            <span
              class="wrapper"
            >
              <i
                class="material-icons icon isLeft medium"
              >
                arrow_back
              </i>
              Back to Order management flows
            </span>
          </button>
          <div
            class="mb-3"
          >
            <h4
              class="cancellationsPolicyTitle"
            >
              Cancel order
            </h4>
            <p
              class="cancellationsPolicyDescription"
            >
              Allow customers to request order cancellations directly from chat and your help center. A cancellation can only be requested if the order hasn't been processed or shipped.
               
              <a
                href="https://docs.gorgias.com/en-US/self-service-portal-statuses-81862#actions-availability"
                rel="noopener noreferrer"
                target="_blank"
              >
                Read more
              </a>
            </p>
            <br />
            <h5
              class="eligibilityWindowTitle"
            >
              Eligibility window
            </h5>
            <p
              class="eligibilityWindowDescription"
            >
              Customers can request a cancellation when an order meets the following criteria:
            </p>
            <form
              class=""
            >
              <div
                class="eligibilityWindowContainer"
              >
                <div
                  class="orderStatus"
                  id="order-status"
                >
                  Order status is
                </div>
                <div>
                  <div
                    class="dropdown"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="true"
                      class="orderStatusSelectField"
                      data-toggle="dropdown"
                    >
                      <div
                        class="select dropdown-toggle"
                      >
                        <span
                          class="label"
                          style="min-width: 10px; opacity: 1;"
                        >
                          Unfulfilled
                        </span>
                        <input
                          autocomplete="chrome-off"
                          class="input"
                          style="min-width: 10px;"
                          type="text"
                          value=""
                        />
                        <i
                          class="material-icons dropdownIcon"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <div
                      aria-hidden="true"
                      class="options dropdown-menu"
                      role="menu"
                      tabindex="-1"
                    >
                      
                      <button
                        class="option option--focused dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Processing Fulfillment
                        </span>
                      </button>
                      <button
                        class="option dropdown-item"
                        role="menuitem"
                        tabindex="0"
                        type="button"
                      >
                        <span>
                          Pending Delivery
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="deleteButton"
                >
                  <i
                    class="material-icons red mr-1"
                  >
                    clear
                  </i>
                </div>
              </div>
              <p>
                This is hidden behind
                 
                <i>
                  self-service-automated-response-order-management
                </i>
                 
                flag
              </p>
              <button
                class="wrapper mr-2 fill primary medium isDisabled"
                disabled=""
                type="submit"
              >
                Save changes
              </button>
              <button
                class="wrapper fill secondary medium isDisabled"
                disabled=""
                type="button"
              >
                Cancel
              </button>
            </form>
            <br />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
